@@ -1,0 +1,4 @@
+
+windowWithFocus <- function() {
+    xdotool("getwindowfocus -f", intern=TRUE)
+}
