@@ -1,5 +1,6 @@
 
-xdotool <- function(command) {
+xdotool <- function(command, intern=FALSE) {
     cmd <- paste0("xdotool ", command)
-    system(cmd)
+    system(cmd, intern=intern)
 }
+
